# test

./: .gitignore  README.md  pyproject.toml
finance_app/: __init__.py  cli.py  tracker.py
tests/: test_tracker.py
